@@ -20,11 +20,16 @@ TODO: decrqm http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
 TODO: perl-shell-window? perl-unix-socket?
 TODO: command line editing when icanon?
 
+TODO: work around mc misdetecting baudrate
+TODO: resources section in manual talks bullshit about system-wide app-defaults file
 	- don't swap perl env with real env, save and restore it, just in case
           we ever get recursive perl invocations. also saves a bit of codespace
           with gcc.
         - fix various memory leaks (Emanuele Giaquinta).
         - fix debian bug #504817, to the extent possible.
+	- try to detect byte order at compile time, seems to work around weird linking
+          errors on freebsd (seems to have trouble with static member variables) - also
+          saves a coupel of hudnred bytes, if your compiler is smart enough.
 
 9.10 Mon Dec 13 17:43:52 CET 2010
 	- the "schmorp=north korea dickey=south korea" release.
